plugins {
    id "java"
    id "application"
}

group "de.lispyclouds"
version "1.0-SNAPSHOT"

repositories {
    mavenCentral()
}

dependencies {
    implementation group: "io.helidon.webserver", name: "helidon-webserver", version: "2.0.2"

    testImplementation group: "junit", name: "junit", version: "4.12"
}

compileJava {
    sourceCompatibility = "14"
    targetCompatibility = "14"
}

mainClassName = "Main"

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}
